# python-library-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.md.rename  bump_version.sh  mkdocs.yml  pyproject.toml  pyrightconfig.json  setup_repo.sh  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml.rename  release.yml.rename
docs/: api.md  installation.md  usage.md
src/: __init__.py  example.py
tests/: __init__.py  test_app.py
